@@ -327,16 +327,69 @@ if ((Test-Path $90meter) -and $env:USERDNSDOMAIN -like "*.smil.mil") {
 }
 
 if ((Test-Path $activclient) -and $env:USERDNSDOMAIN -notlike "*.smil.mil") {
-    $inac = $null
-    $inac = Get-WmiObject -Class Win32_Product -Filter "Name LIKE '%ActivClient%'"
-    if ($null -ne $inac -and $inac -ne "") {
-        Write-Output "$cn`: Uninstalling old version of ActivClient."
-        Get-WmiObject -Class Win32_Product -Filter "Name LIKE '%ActivClient%'" | Remove-WmiObject
-        Start-Sleep 150
+    $sv = $null
+    $ipv = $null
+    $install = $false
+    $pn = "ActivClient"
+    $sv = Get-Content $activclient\SoftwareVersion.txt
+    $ipv = ($ip | Where-Object {$_.ProgramName -like "*ActivClient*"} | Select-Object Version)[0].Version
+
+    if ($null -ne $ipv -or $ipv -ne "") {
+        $ipv = $ipv.Split('.')
+        $ipv = $ipv.Split(' ')
     }
-    Write-Output "$cn`: Installing ActivClient."
-    Start-Process c:\Patches\ActivClient\Deploy-application.exe -ArgumentList "-DeployMode 'NonInteractive'" -NoNewWindow -Wait
-    Start-Sleep 180
+    $sv = $sv.Split('.')
+    $sv = $sv.Split(' ')
+
+    #Determine if need to install
+    if ($null -ne $ipv -or $ipv -ne "") {
+        if ($sv[0] -gt $ipv[0]) {
+            $install = $true
+        }
+        elseif ($sv[0] -eq $ipv[0]) {
+            if ($sv[1] -gt $ipv[1]) {
+                $install = $true
+            }
+            elseif ($sv[1] -eq $ipv[1]) {
+                if ($sv[2] -gt $ipv[2]) {
+                    $install = $true
+                }
+                elseif ($sv[2] -eq $ipv[2]) {
+                    if ($sv[3] -gt $ipv[3]) {
+                        $install = $true
+                    }
+                    elseif ($sv[3] -eq $ipv[3]) {
+                        $install = $false
+                    }
+                    elseif ($sv[3] -lt $ipv[3]) {
+                        $install = $false
+                    }
+                }
+                elseif ($sv[2] -lt $ipv[2]) {
+                    $install = $false
+                }
+            }
+            elseif ($sv[1] -lt $ipv[1]) {
+                $install = $false
+            }
+        }
+        elseif ($sv[0] -lt $ipv[0]) {
+            $install = $false
+        }
+    }#if already installed
+    else {
+        $install = $true
+    }
+
+    #Install or not
+    if ($install -eq $true) {
+        Write-Output "$cn`: Installing $pn."
+        Start-Process $activclient\Deploy-application.exe -ArgumentList "-DeployMode 'NonInteractive'" -NoNewWindow -Wait
+        Start-Sleep 330
+    }
+    else {
+        Write-Output "$cn`: $pn same as installed version or older. Skipping..."
+    }
 }
 
 if (Test-Path $acrobat) {
